# authe-python

./: .gitignore  LICENSE  README.md  pyproject.toml
authe/: __init__.py  client.py  config.py  instrumentor.py
examples/: example_manual.py  example_openai.py
tests/: test_config.py
