[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authe"
version = "0.2.0"
description = "The trust layer for AI agents. Observability, identity, and reputation in one line of code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "authe.me", email = "hello@authe.me" },
]
keywords = ["ai", "agents", "observability", "trust", "identity", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "wrapt>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://authe.me"
Documentation = "https://docs.authe.me"
Repository = "https://github.com/autheme/authe-python"
Issues = "https://github.com/autheme/authe-python/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
